--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Yifei Chen <hsyche45@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hsyche45/yifei.github.io"
+    "url": "https://github.com/hsyche45/portfolio"
   },
   "keywords": [
     "gatsby"
@@ -18,7 +18,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "husky": {
     "hooks": {
